platform/playwright/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: playwright
  type: ClusterIP
