platform/playwright/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: playwright
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`playwright.kfirs.com`)
      services:
        - kind: Service
          name: playwright
          port: http
  tls:
    secretName: playwright-tls
